--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-sanitizer": "^1.0.5",
     "get-video-id": "^3.2.0",
     "get-youtube-id": "^1.0.1",
+    "gsap": "^3.6.1",
     "import": "^0.0.6",
     "mysql": "^2.18.1",
     "node-sass": "^5.0.0",
