--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "casa-frontend",
+  "name": "jonny-wedding",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt build",
+    "build": "nuxt generate",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext --fix \".js,.vue\" --ignore-path .gitignore .",
